--- a/eventHandlers/events/index.html
+++ b/eventHandlers/events/index.html
@@ -32,16 +32,44 @@
                                     <input type="text" class="form-control" id="city" required>
                                 </div>
                                 <div class="col-md-3 mb-3">
-                                    <label for="stateInfo"> State </label>
-                                    <input type="text" class="form-control" id="state" required>
+                                    <label for="state"> State </label>
+                                    <input type="text" class="form-control" id="state" name="state">
                                 </div>
                                 <div class="col-md-3 mb-3">
                                         <label for="stateInfo"> Zip Code </label>
                                         <input type="text" class="form-control" id="zipCode" required>
                                     </div>
                             </div>
-                          
+
+                            <div class="row ">
+                                <label for="addressType"> Billing Address</label>
+                                <select class="custom-select d-block w-100" id="addressField" name="addressField">
+                                    <option value="" disabled selected>Please select...
+                                    <option value="billSameAddress"> Bill to Same Address</option>
+                                    <option value="billDiffAddress"> Bill to a different Address</option>
+                                </select>
+                            </div>
                             <hr class="mb-4">
+                            <div class="billingAddress row">
+                            <div class="col-md-6 mb-4">
+                                <label for="addressInfo">Address</label>
+                                <input type="text" class="form-control" id="addressInfo" required>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-3 mb-3">
+                                    <label for="cityInfo"> City </label>
+                                    <input type="text" class="form-control" id="city" required>
+                                </div>
+                                <div class="col-md-3">
+                                    <label for="state"> State </label>
+                                    <input type="text" class="form-control" id="state" name="state">
+                                </div>
+                                <div class="col-md-3 mb-3">
+                                        <label for="stateInfo"> Zip Code </label>
+                                        <input type="text" class="form-control" id="zipCode" required>
+                                    </div>
+                            </div>
+                            </div>
                             <button id="totalPrice" class="btn btn btn-outline-primary" type="button">Submit</button>
                             <button type="reset" class="btn btn-outline-danger">Reset</button>  
                             </div>
@@ -55,5 +83,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+    <script src="scripts/scripts.js"></script>
+</body>
 </html>
