--- a/eventObject/index.html
+++ b/eventObject/index.html
@@ -19,7 +19,7 @@
                             <div class="row">
                                 <div class="col-md-6 mb-4">
                                     <label for="para1">Text</label>
-                                    <input type="text" class="form-control" id="para">
+                                    <input type="text" class="form-control" id="para" maxlength="50">
                                 </div>
                             </div>
                             <p id="paramessage"> </p>
