--- a/eventObject/index.html
+++ b/eventObject/index.html
@@ -26,6 +26,13 @@
                             <hr class="mb-4">
                     </form>
                 </section>
+
+                <section class="container col-md-5 offset-md-4 formBorder">
+                    <img class="images" src="images/flower1.jpg" alt="flower">  
+                    <img class="images" src="images/flower2.jpg" alt="flower">  
+                    <img class="images" src="images/flower3.jpg" alt="flower">  
+                
+                </section>
             </Main>
 </div>
     <!-- Optional JavaScript -->
